[package]
name = "bnotes-ls"
authors = ["Matt Bedell <matt@bedell.co>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
tower-lsp = "0.17.0"
tokio = { version = "1.21.2", features = ["full"] }
